src/pesquisa/pesquisa.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	outline: none;
	text-decoration: none;
	font-family: "karla", sans-serif;
	font-weight: 400;
}
:root{
	--text: #392c2c;
}
body {
	height: 100vh;
	width: 100vw;
	background:linear-gradient(to right, #89DE74,#79FF57);
}
.hide {
	display: none;
}
.searchContainer{
	position: relative;
	top: 0px;
}
.voltarIcon {
	height: 13px;
	width: 19px;
}
.footer{
	display: flex;
	flex-direction: row;
}
.footer .item{
	margin-left: 5px;
	text-align: center;
}
.footer .item .footerSpan{
	color: var(--text);
	font-size: 10px;
}
.title.small{
	margin-top: 2px;
	font-size: 11px;
	color: white
}
.header {
	display: flex;
	flex-direction: row;
	align-items: center;
	margin-top: 20px;
	margin-left: 19px;
	margin-bottom: 10px;
}
header a {
	font-size: 16px;
	color: #219653;
	white-space: nowrap;
}
header .logo {
	position: absolute;
	left: 50%;
	height: 32px;
	width: 32px;
}

main {
	display: flex;
	padding: 28px 56px;
	left: 50%;
    transform: translateX(-50%);
	position: absolute;
	width: 100%;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	height: max-content;
	min-height: 100vh;
	border-radius: 30px 30px 0 0;
	background-color: white;
}
main h2 {
	color: #219653;
	font-size: 20px;
	align-self: center;
}
main .pesquisa {
	padding-left: 5px;
	width: 100%;
	height: 100%;
	border: none;
}
.input {
	display: flex;
	flex-direction: row;
	align-items: center;
	width: 90%;
	margin: 11px auto 5px auto;
	border: 1px solid transparent;
	border-bottom-color: #27ae60;
}
main .input img {
	width: 12px;
	height: 12px;
}
.card {
	width: 248px;
	height: max-content;
	background:linear-gradient(45deg, #27ae60,#65dd47);
	border-radius: 12px;
	padding: 19px 13px;
	margin-top: 8px;
	transition: background-color 5s;
}
.filterContainer {
	display: flex;
	width: 92%;
	justify-content: flex-start;
}
.card header {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-evenly;
	margin-bottom: 23px;
}
.card .circle {
	width: 80px;
	height: 80px;
	background-color: white;
	border-radius: 100px;
	display: flex;
	align-items: center;
	justify-content: center;
}
.card header h2 {
	color: white;
	font-family: "karla", sans-serif;
	font-size: 28px;
	text-transform: capitalize;
}
.card header img {
	height: 54px;
	width: 57px;
}
.info .title {
	font-size: 14px;
	color: white;
	white-space: nowrap;
}
.info .content {
	font-size: 11px;
	text-align: left;
	color: var(--text);
	margin-left: 10px;
}

.filter {
	border: none;
	background-color: transparent;
	color: var(--text);
	width: 100%;
	white-space: nowrap;
	text-overflow: ellipsis;
}
.filterbox{
	border: 1px solid transparent;
	border-bottom-color: #27ae60 ;
	width: 55%;
	margin-left: 10px;
}
.filter option {
	color: #27ae60;
}
.filter option:disabled {
	color: gray;
}

